tests/internal/negative_case/bad_function_param_redeclaration.c
// Expected: compile fail (duplicate parameter name in same scope)
int bad(int x, int x) {
  return x;
}
